--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 alabaster==0.7.12
+astroid==2.3.3
 attrs==19.3.0
 Babel==2.7.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+codecov==2.0.15
+coverage==5.0.3
 docutils==0.15.2
 entrypoints==0.3
 flake8==3.7.9
 Flask==1.1.1
 idna==2.8
 imagesize==1.2.0
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 more-itertools==8.0.2
@@ -21,8 +26,10 @@ py==1.8.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
 Pygments==2.5.2
+pylint==2.4.4
 pyparsing==2.4.6
 pytest==5.3.2
+pytest-cov==2.8.1
 pytz==2019.3
 requests==2.22.0
 six==1.13.0
@@ -37,3 +44,4 @@ sphinxcontrib-serializinghtml==1.1.3
 urllib3==1.25.7
 wcwidth==0.1.7
 Werkzeug==0.16.0
+wrapt==1.11.2
