--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ media/*
 mindsweeper/save.pg.py
 scripts/start_over_db.py
 scripts/start.sh
+mindsweeper/gui
+mindsweeper/client copy.py
+mindsweeper/server copy.py
+mindsweeper/utils/reader copy.py
