--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,63 @@
-alabaster==0.7.12
-astroid==2.3.3
+aniso8601==7.0.0
+astroid==2.4.1
 attrs==19.3.0
-Babel==2.7.0
-certifi==2019.11.28
+bcrypt==3.1.7
+cached-property==1.5.1
+certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
-Click==7.0
-codecov==2.0.15
-coverage==5.0.3
-docutils==0.15.2
-entrypoints==0.3
-flake8==3.7.9
-Flask==1.1.1
-idna==2.8
-imagesize==1.2.0
+click==7.1.2
+cryptography==2.9.2
+docker==4.2.0
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
+emoji==0.5.4
+flake8==3.8.1
+Flask==1.1.2
+graphene==2.1.8
+graphql-core==2.3.2
+graphql-relay==2.0.1
+grpcio==1.29.0
+grpcio-tools==1.29.0
+idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10.3
+Jinja2==2.11.2
+jsonschema==3.2.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-more-itertools==8.0.2
-packaging==19.2
+more-itertools==8.3.0
+packaging==20.4
+paramiko==2.7.1
+peewee==3.13.3
+pika==1.1.0
+Pillow==7.1.2
 pluggy==0.13.1
+promise==2.3
+protobuf==3.12.0
+psycopg2-binary==2.8.5
 py==1.8.1
-pycodestyle==2.5.0
-pyflakes==2.1.1
-Pygments==2.5.2
-pylint==2.4.4
-pyparsing==2.4.6
-pytest==5.3.2
-pytest-cov==2.8.1
-pytz==2019.3
-requests==2.22.0
-six==1.13.0
-snowballstemmer==2.0.0
-Sphinx==2.3.1
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-urllib3==1.25.7
-wcwidth==0.1.7
-Werkzeug==0.16.0
-wrapt==1.11.2
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+pylint==2.5.2
+pymongo==3.10.1
+PyNaCl==1.3.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+pytest==5.4.2
+PyYAML==5.3.1
+requests==2.23.0
+requests-toolbelt==0.9.1
+Rx==1.6.1
+six==1.14.0
+SQLAlchemy==1.3.17
+texttable==1.6.2
+toml==0.10.1
+urllib3==1.25.9
+wcwidth==0.1.9
+websocket-client==0.57.0
+Werkzeug==1.0.1
+wrapt==1.12.1
