--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
 click==7.1.2
+coverage==5.1
 cryptography==2.9.2
 docker==4.2.0
 docker-compose==1.25.5
@@ -48,6 +49,7 @@ PyNaCl==1.3.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==5.4.2
+pytest-cov==2.8.1
 PyYAML==5.3.1
 requests==2.23.0
 requests-toolbelt==0.9.1
