--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ chardet==3.0.4
 click==7.1.2
 coverage==5.1
 cryptography==2.9.2
+cycler==0.10.0
 docker==4.2.0
 docker-compose==1.25.5
 dockerpty==0.4.1
@@ -26,11 +27,15 @@ isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
 jsonschema==3.2.0
+kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
+matplotlib==3.2.1
 mccabe==0.6.1
 more-itertools==8.3.0
+numpy==1.18.4
 packaging==20.4
+pandas==1.0.3
 paramiko==2.7.1
 peewee==3.13.3
 pika==1.1.0
@@ -50,10 +55,14 @@ pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==5.4.2
 pytest-cov==2.8.1
+python-dateutil==2.8.1
+pytz==2020.1
 PyYAML==5.3.1
 requests==2.23.0
 requests-toolbelt==0.9.1
 Rx==1.6.1
+scipy==1.4.1
+seaborn==0.10.1
 six==1.14.0
 SQLAlchemy==1.3.17
 texttable==1.6.2
