--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-aniso8601==7.0.0
 astroid==2.4.1
 attrs==19.3.0
-bcrypt==3.1.7
 cached-property==1.5.1
 certifi==2020.4.5.1
 cffi==1.14.0
@@ -11,23 +9,15 @@ codecov==2.1.3
 coverage==5.1
 cryptography==2.9.2
 cycler==0.10.0
-docker==4.2.0
-docker-compose==1.25.5
-dockerpty==0.4.1
 docopt==0.6.2
 emoji==0.5.4
-flake8==3.8.1
 Flask==1.1.2
-graphene==2.1.8
-graphql-core==2.3.2
-graphql-relay==2.0.1
 grpcio==1.29.0
 grpcio-tools==1.29.0
 idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
-jsonschema==3.2.0
 kiwisolver==1.2.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
@@ -37,39 +27,27 @@ more-itertools==8.3.0
 numpy==1.18.4
 packaging==20.4
 pandas==1.0.3
-paramiko==2.7.1
-peewee==3.13.3
 pika==1.1.0
 Pillow==7.1.2
+pipdeptree==0.13.2
 pluggy==0.13.1
-promise==2.3
 protobuf==3.12.0
 psycopg2-binary==2.8.5
 py==1.8.1
-pycodestyle==2.6.0
 pycparser==2.20
-pyflakes==2.2.0
 pylint==2.5.2
 pymongo==3.10.1
-PyNaCl==1.3.0
 pyparsing==2.4.7
-pyrsistent==0.16.0
 pytest==5.4.2
 pytest-cov==2.8.1
 python-dateutil==2.8.1
 pytz==2020.1
-PyYAML==5.3.1
 requests==2.23.0
-requests-toolbelt==0.9.1
-Rx==1.6.1
 scipy==1.4.1
 seaborn==0.10.1
 six==1.14.0
-SQLAlchemy==1.3.17
-texttable==1.6.2
 toml==0.10.1
 urllib3==1.25.9
 wcwidth==0.1.9
-websocket-client==0.57.0
 Werkzeug==1.0.1
 wrapt==1.12.1
