--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     depends_on:
       - ms_mq
       - ms_db
-    command: python -m mindsweeper.api run-server -h '0.0.0.0'
+    command: python -m mindsweeper.api run-server -h '0.0.0.0' -d 'mongodb://ms_db:27017/'
 
   ms_parser_color_image:
       image: mindsweeper
