--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ more-itertools==8.3.0
 numpy==1.18.4
 packaging==20.4
 pandas==1.0.3
+pbr==5.4.5
 pika==1.1.0
 Pillow==7.1.2
 pipdeptree==0.13.2
@@ -54,6 +55,7 @@ seaborn==0.10.1
 six==1.14.0
 snowballstemmer==2.0.0
 Sphinx==3.0.4
+sphinx-click==2.3.2
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
