--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cycler==0.10.0
 docopt==0.6.2
 docutils==0.16
 emoji==0.5.4
+flake8==3.8.2
 Flask==1.1.2
 Flask-Cors==3.0.8
 grpcio==1.29.0
@@ -40,7 +41,9 @@ pluggy==0.13.1
 protobuf==3.12.0
 psycopg2-binary==2.8.5
 py==1.8.1
+pycodestyle==2.6.0
 pycparser==2.20
+pyflakes==2.2.0
 Pygments==2.6.1
 pylint==2.5.2
 pymongo==3.10.1
