--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ pika==1.1.0
 Pillow==7.1.2
 pipdeptree==0.13.2
 pluggy==0.13.1
-protobuf==3.12.0
+# protobuf==3.12.0
 psycopg2-binary==2.8.5
 py==1.8.1
 pycodestyle==2.6.0
